--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
   <div class="container">
-    <img src="assets/images/illustration-article.svg" alt="" class="container-img">
+    <img src="./assets/images/illustration-article.svg" alt="" class="container-img">
     <button class="heading">Learning</button>
     <p class="date">Published 21 Dec 2023</p>
     <h2 class="heading-1">HTML & CSS foundations</h2>
     <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
   <footer>
-    <img src="assets/images/image-avatar.webp" alt="image of author" class="footer-img">
+    <img src="./assets/images/image-avatar.webp" alt="image of author" class="footer-img">
     <p>Greg Hooper</p> 
   </footer>
 </div>  
