--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link href="style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,13 +14,13 @@
 </head>
 <body>
   <div class="container">
-    <img src="./assets/images/illustration-article.svg" alt="" class="container-img">
+    <img src="assets/images/illustration-article.svg" alt="" class="container-img">
     <button class="heading">Learning</button>
     <p class="date">Published 21 Dec 2023</p>
     <h2 class="heading-1">HTML & CSS foundations</h2>
     <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
   <footer>
-    <img src="./assets/images/image-avatar.webp" alt="image of author" class="footer-img">
+    <img src="assets/images/image-avatar.webp" alt="image of author" class="footer-img">
     <p>Greg Hooper</p> 
   </footer>
 </div>  
